EL-2738: Encrypt password stored in Session Data
Implement AES-256-GCM encryption for sensitive session credentials
to protect password and OAuth client secret at rest.

Changes:
- Created encryption utility (src/utils/encryption.ts) with encrypt/decrypt functions
- Updated loginController to encrypt password and client_secret before storing in session
- Updated axiosSetup to decrypt credentials when retrieving from session
- Added tamper detection - corrupted sessions are automatically destroyed
- Added SESSION_ENCRYPTION_KEY to configuration with validation
- Updated CI/CD pipeline to support encryption key deployment
- Added comprehensive unit tests (28 encryption tests, all passing)
- Updated GitHub Actions workflows with test encryption keys

Security:
- Algorithm: AES-256-GCM (authenticated encryption)
- Key: 64 hex characters (32 bytes) from SESSION_ENCRYPTION_KEY
- IV: 12 bytes randomly generated per encryption (ensures unique ciphertexts)
- Auth Tag: 16 bytes for tamper detection
- Format: iv:authTag:ciphertext (base64 encoded)

Testing:
- 232 unit tests passing
- Full ESLint compliance (all jsdoc/* rules satisfied)
- Zero linting errors or warnings
- Encryption/decryption verified working in live application

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,5 @@ API_URL='https://laa-cla-backend-uat.apps.live-1.cloud-platform.service.justice.
 API_PREFIX='/cla_provider/api/v1'
 API_CLIENT_ID='Speak to another Dev'
 API_CLIENT_SECRET='Speak to another Dev'
+# Encryption key for session data (32-byte hex string)
+SESSION_ENCRYPTION_KEY='your_local_dev_key_here_64_hex_characters_example_1234567890abcdef'
