--- a/deploy/laa-manage-your-civil-cases/templates/deployment.yaml
+++ b/deploy/laa-manage-your-civil-cases/templates/deployment.yaml
@@ -65,6 +65,8 @@ spec:
               value: "{{ .Values.env.SERVICE_URL }}"
             - name: SESSION_SECRET
               value: "{{ .Values.env.SESSION_SECRET }}"
+            - name: SESSION_ENCRYPTION_KEY
+              value: "{{ .Values.env.SESSION_ENCRYPTION_KEY }}"
             - name: SESSION_NAME
               value: "{{ .Values.env.SESSION_NAME }}"
             - name: RATELIMIT_HEADERS_ENABLED
