--- a/.github/actions/deploy/action.yml
+++ b/.github/actions/deploy/action.yml
@@ -24,6 +24,9 @@ inputs:
         required: true
     session_secret:
         description: "Session secret"
+    session_encryption_key:
+        description: "Session encryption key for sensitive data"
+        required: true
     slack_webhook_url:
         description: "Slack webhook url"
     api_client_id:
@@ -66,6 +69,7 @@ runs:
         GITHUB_REF_NAME: ${{ github.ref_name }}
         K8S_NAMESPACE: ${{ inputs.kube-namespace }}
         SESSION_SECRET: ${{ inputs.session_secret }}
+        SESSION_ENCRYPTION_KEY: ${{ inputs.session_encryption_key }}
         API_CLIENT_ID: ${{ inputs.api_client_id }}
         API_CLIENT_SECRET: ${{ inputs.api_client_secret }}
 
