--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -40,6 +40,7 @@ jobs:
           # Add session-related environment variables
           SESSION_SECRET: "playwright-test-secret" # Use a simple test secret for Playwright
           SESSION_NAME: "sessionId"
+          SESSION_ENCRYPTION_KEY: "0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef" # Test encryption key (64 hex chars)
           NODE_ENV: "test"
           # Add other required environment variables
           SERVICE_NAME: "Manage your civil cases"
@@ -103,6 +104,7 @@ jobs:
           CI: true
           SESSION_SECRET: "accessibility-test-secret"
           SESSION_NAME: "sessionId"
+          SESSION_ENCRYPTION_KEY: "0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef" # Test encryption key (64 hex chars)
           NODE_ENV: "test"
           SERVICE_NAME: "Manage your civil cases"
           SERVICE_PHASE: "Beta"
