--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@types/mocha": "^10.0.10",
     "@types/morgan": "^1.9.9",
     "@types/node": "^24.10.0",
+    "@types/node-localstorage": "^1.3.3",
     "@types/nunjucks": "^3.2.6",
     "@types/sinon": "^17.0.4",
     "@types/supertest": "^6.0.3",
@@ -102,6 +103,7 @@
     "middleware-axios": "^3.0.0",
     "mocha": "^11.7.5",
     "msw": "^2.12.1",
+    "node-localstorage": "^3.0.5",
     "nodemon": "^3.1.9",
     "playwright-core": "^1.56.1",
     "prettier": "^3.6.2",
