--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
     "livereload": "^0.10.2",
     "middleware-axios": "^3.0.0",
     "mocha": "^11.7.5",
-    "msw": "2.11.3",
+    "msw": "~2.11.3",
     "nodemon": "^3.1.9",
     "playwright-core": "^1.56.1",
     "prettier": "^3.6.2",
