--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "coverage": "c8 yarn test:unit --check-coverage"
   },
   "engines": {
-    "node": "25.1.0"
+    "node": "25.2.0"
   },
   "dependencies": {
     "@ministryofjustice/frontend": "^7.1.0",
@@ -94,6 +94,7 @@
     "eslint-config-love": "^133.0.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-jsdoc": "^61.1.12",
+    "glob": "^13.0.0",
     "globals": "^16.5.0",
     "husky": "^9.1.7",
     "jsdom": "^27.1.0",
