--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v5
 
+      - name: Install system build tools
+        run: sudo apt-get update && sudo apt-get install -y build-essential python3
+
       - name: Setup Node and Dependencies
         uses: ./.github/actions/setup-node
 
