--- a/.github/actions/setup-node/action.yml
+++ b/.github/actions/setup-node/action.yml
@@ -5,7 +5,7 @@ runs:
   using: "composite"
   steps:
     - name: Install system build tools
-      run: sudo apt-get update && sudo apt-get install -y build-essential python3
+      run: sudo apt-get update && sudo apt-get install -y build-essential python3 g++ make
       shell: bash
 
     - name: Read Node version from .nvmrc
