Extract Yarn 4 caching into reusable composite action
- Create .github/actions/cache-yarn/action.yml composite action
- Replace duplicated Cache Yarn 4 steps in deploy.yml with action
- Add Yarn caching to mocha.yml and playwright.yml workflows
- Improves DRY principles and makes cache strategy updates safer

--- a/.github/workflows/mocha.yml
+++ b/.github/workflows/mocha.yml
@@ -16,6 +16,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v5
 
+      - name: Cache Yarn 4
+        uses: ./.github/actions/cache-yarn
+
       - name: Setup Node and Dependencies
         uses: ./.github/actions/setup-node
 
