--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,15 +15,7 @@ jobs:
         uses: actions/checkout@v5
 
       - name: Cache Yarn 4
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.yarn/cache
-            .yarn/unplugged
-            .yarn/build-state.yml
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}-${{ hashFiles('.yarnrc.yml') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
+        uses: ./.github/actions/cache-yarn
 
       - name: Setup Node and Dependencies
         uses: ./.github/actions/setup-node
@@ -39,15 +31,7 @@ jobs:
         uses: actions/checkout@v5
 
       - name: Cache Yarn 4
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.yarn/cache
-            .yarn/unplugged
-            .yarn/build-state.yml
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}-${{ hashFiles('.yarnrc.yml') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
+        uses: ./.github/actions/cache-yarn
 
       - name: Setup Node and Dependencies
         uses: ./.github/actions/setup-node
