EL-2786: Include character limit on support needs notes (#367)
If applied:
- this adds a character limit on support needs notes box
- adds a CHARACTER_THRESHOLD constant

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -52,6 +52,7 @@ jobs:
           DEPARTMENT_URL: "https://www.gov.uk/government/organisations/legal-aid-agency"
           CONTACT_EMAIL: "your-team@digital.justice.gov.uk"
           SERVICE_URL: "https://www.gov.uk/legal-aid"
+          CHARACTER_THRESHOLD: "85"
           RATELIMIT_HEADERS_ENABLED: "true"
           RATE_LIMIT_MAX: "100"
           RATE_WINDOW_MS: "900000"
@@ -118,6 +119,7 @@ jobs:
           DEPARTMENT_URL: "https://www.gov.uk/government/organisations/legal-aid-agency"
           CONTACT_EMAIL: "your-team@digital.justice.gov.uk"
           SERVICE_URL: "https://www.gov.uk/legal-aid"
+          CHARACTER_THRESHOLD: "85"
           RATELIMIT_HEADERS_ENABLED: "true"
           RATE_LIMIT_MAX: "100"
           RATE_WINDOW_MS: "900000"
