--- a/.github/workflows/playwright-route-coverage.yml
+++ b/.github/workflows/playwright-route-coverage.yml
@@ -34,7 +34,7 @@ jobs:
           CI: true
           SESSION_SECRET: "accessibility-test-secret"
           SESSION_NAME: "sessionId"
-          SESSION_ENCRYPTION_KEY: "0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef" # Test encryption key (64 hex chars)
+          SESSION_ENCRYPTION_KEY: "0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef"
           NODE_ENV: "test"
           SERVICE_NAME: "Manage your civil cases"
           SERVICE_PHASE: "Beta"
@@ -49,10 +49,4 @@ jobs:
           API_URL: "http://localhost:3001"
           API_PREFIX: "/mock-api"
           USE_MOCK_API: "true"
-
-      - name: Upload Playwright test route coverage artifact
-        if: always()
-        uses: actions/upload-artifact@v5
-        with:
-          name: playwright-test-route-coverage-report
-          path: coverage/
+          ROUTE_COVERAGE_THRESHOLD: "100" # Require at least 100% route coverage
