Add back the job to `Install Playwright Chromium` and make UAT dependant on `playwright-route-coverage`

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -135,6 +135,7 @@ jobs:
       - build-image
       - mocha-unit-tests
       - playwright
+      - playwright-route-coverage
 
     steps:
       - name: Checkout
