Add a bash shell to the command

--- a/.github/actions/reusable-playwright-steps/action.yml
+++ b/.github/actions/reusable-playwright-steps/action.yml
@@ -12,8 +12,10 @@ runs:
 
   - name: Build application
     working-directory: ./
+    shell: bash
     run: yarn build
 
   - name: Install Playwright Chromium
     working-directory: ./
+    shell: bash
     run: yarn playwright install chromium --with-deps
