--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -125,7 +125,7 @@ jobs:
       - snyk
       - build-image
       - mocha-unit-tests
-      # - playwright
+      - playwright
 
     steps:
       - name: Checkout
