--- a/.github/workflows/mocha.yml
+++ b/.github/workflows/mocha.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Upload coverage artifact
         if: always()
-        uses: actions/upload-artifact@v5
+        uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
         with:
           name: code-coverage-report
           path: coverage/
