If applied, this enforces SHA pinning for GitHub Actions

--- a/.github/actions/setup-node/action.yml
+++ b/.github/actions/setup-node/action.yml
@@ -13,7 +13,7 @@ runs:
       shell: bash
 
     - name: Set up Node.js
-      uses: actions/setup-node@v5
+      uses: actions/setup-node@65d868f8d4d85d7d4abb7de0875cde3fcc8798f5 # v6.1.0
       with:
         node-version: ${{ env.NODE_VERSION }}
       env:
