--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
 
-      - name: Reuseable set up app
+      - name: Reuseable Set up app
         uses: ./.github/actions/set_up_app
 
       - name: Run ESLint
@@ -27,7 +27,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
         
-      - name: Reuseable set up app
+      - name: Reuseable Set up app
         uses: ./.github/actions/set_up_app
 
       - name: Run security audit
