--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
   "packageManager": "yarn@4.9.2",
   "resolutions": {
     "form-data": "4.0.4",
-    "glob": ">=11.1.0"
+    "glob": ">=11.1.0",
+    "tar": "7.5.3"
   }
 }
