--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
   "resolutions": {
     "form-data": "4.0.4",
     "glob": ">=11.1.0",
-    "tar": "7.5.3"
+    "tar": "7.5.3",
+    "lodash": "4.17.23"
   }
 }
