--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "form-data": "4.0.4",
     "glob": ">=11.1.0",
     "tar": "7.5.3",
-    "lodash": "4.17.23"
+    "lodash": "4.17.23",
+    "@isaacs/brace-expansion": "5.0.1"
   }
 }
