Adds Redis implentation for Session Storage

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,10 @@ NODE_ENV=development
 SESSION_SECRET='s3Cur3'
 SESSION_NAME='sessionId'
 
+# Redis Configuration (for session storage in multi-pod deployments)
+REDIS_ENABLED=true
+REDIS_URL='redis://localhost:6379'
+
 # CLA Backend
 API_URL='https://laa-cla-backend-uat.apps.live-1.cloud-platform.service.justice.gov.uk'
 API_PREFIX='/cla_provider/api/v1'
