--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@ministryofjustice/frontend": "^8.0.0",
+    "@socket.io/redis-adapter": "^8.3.0",
     "@x-govuk/govuk-prototype-components": "^5.0.2",
     "axios": "1.13.5",
     "body-parser": "^2.2.2",
@@ -57,7 +58,8 @@
     "moment": "^2.30.1",
     "morgan": "~1.10.1",
     "nunjucks": "^3.2.4",
-    "redis": "^5.10.0"
+    "redis": "^5.10.0",
+    "socket.io": "^4.8.3"
   },
   "devDependencies": {
     "@axe-core/playwright": "^4.11.1",
