--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "glob": ">=11.1.0",
     "tar": "7.5.3",
     "lodash": "4.17.23",
-    "@isaacs/brace-expansion": "5.0.1"
+    "@isaacs/brace-expansion": "5.0.1",
+    "qs": "^6.14.2"
   }
 }
